# boolean_operator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
shader/: color.frag  color.fs  color.gs  color.vert  lighting.fs  lighting.vs
src/: CMakeLists.txt  main.cpp  meson.build
src/core/: CMakeLists.txt  bbox.h  compute_octree.h  intersect_mesh.cpp  intersect_mesh.h  mesh.cpp  mesh.h  mesh_face_bbox.h  meson.build  octree.h
src/gui/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  mainopenglwidget.cpp  mainopenglwidget.h  meson.build  simpleWindow.cpp  simpleWindow.h
src/gui/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui  ui_mainWindow.h
src/mesh/: meshnode.cpp  meshnode.h  meson.build
src/tools/: meson.build
subprojects/: simple3dengine.wrap
tests/: CMakeLists.txt  meson.build
tests/test-octree/: CMakeLists.txt  meson.build  test_octree.cpp
